--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "sequelize": "^6.6.2",
+    "sqlite3": "^5.0.2"
   },
   "scripts": {
     "start": "nodemon index.js"
